--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
