--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-modal-manager": "^1.0.1",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
